=head1 NAME

Changes - List of significant changes to Devel::NYTProf

(As of $Date: 2012-08-11 11:53:27 +0100 (Sat, 11 Aug 2012) $ $Revision: 1427 $)

=cut

=head2 Changes in Devel::NYTProf 4.08 (svn 1427) 11th Aug 2012

  Fixed version numbers in nytprofhtml and nytprofmerge.

=head2 Changes in Devel::NYTProf 4.07 (svn 1419) 10th Aug 2012

  Fixed html generation to be valid, RT#70207 (H.Merijn Brand).
  nytprofmerge no longer dies on some errors, RT#75918.
  nytprofmerge now sums cumulative_overhead_ticks, RT#75909.
  nytprofmerge now gets in man page installed, RT#75911.

  Enable file=/dev/null to work as fix for RT#74565.
  Updated ::Apache docs including troubleshooting, RT#75912.
  Note Devel::NYTProf::Data is undocumented and why, RT#75914.
  Use Browser::Open if installed for nytprofhtml --open.

  Added and clarified some notes in the troubleshooting docs.
  Added warning for Apache2::SizeLimit in ::Apache, RT#75912.
  Clarified docs re fork generating multiple files, RT#78873.

=head2 Changes in Devel::NYTProf 4.06 (svn r1406) 30th Nov 2010

  Fixed risk of nytprofhtml failure due to over-long filenames RT#62319

  Improved handling of Class::MOP/Moose generated methods.
  Improved handling of embedded filenames, e.g., "(eval N)[$path]"
  Updated and clarified usecputime=1 docs.
  Updated tests for (expected) new functionality in Sub::Name.
  Updated tests for changes in perl 5.13.x.

  Added special handling for the perl built-in accept()
    Effectively the clock stops ticking while in accept().
    This makes profiles of pure-perl web servers more useful.
  Added --no-mergeevals option to nytprofhtml.
  Added "If Statement and Subroutine Timings Don't Match" and
    "If Headline Subroutine Timings Don't Match the Called Subs"
    sections to the DATA COLLECTION AND INTERPRETATION docs.
  Added note to the docs re profiling applications that use Coro.

=head2 Changes in Devel::NYTProf 4.05 (svn 1359) 15th Sept 2010
