@@ -2,9 +2,13 @@
 
 Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2012-08-11 11:53:27 +0100 (Sat, 11 Aug 2012) $ $Revision: 1427 $)
+(As of $Date: 2012-09-15 11:21:09 +0100 (Sat, 15 Sep 2012) $ $Revision: 1431 $)
 
 =cut
+
+=head2 Changes in Devel::NYTProf 4.09 (svn 1431) 15th Sep 2012
+
+  Fixed to work for perl v5.17.3+ thanks to David Mitchell.
 
 =head2 Changes in Devel::NYTProf 4.08 (svn 1427) 11th Aug 2012
 
